apps/base/worker/authorization.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata: { name: worker-from-api, namespace: ulys }
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: worker-http
  requiredAuthenticationRefs:
    - name: api
      kind: ServiceAccount
      group: ""
